--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,11 @@
+/* Table of contents
+––––––––––––––––––––––––––––––––––––––––––––––––––
+-Responsive helpers
+-Text style
+
+ */
+
+
 html{
 	background: url(../images/background.png) no-repeat center center fixed; 
 	-webkit-background-size: cover;
@@ -7,14 +15,59 @@ html{
 }
 body {
   padding: 50px;
-  font: 14px Avenir, Helvetica, Arial, sans-serif;
+  font-family: Avenir, Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
 }
 
-.content {
-  width: 1000px ;
+
+/* =========================================================================
+                            Responsive Helpers
+=======================================================================*/
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+.center {
+  width: 800px;
+  text-align: center;
+}
+
+/* =========================================================================
+                            Style
+=======================================================================*/
+
+.white-text {
+	color: white;
+}
+
+.title {
+	font-size: 80px;
+	font-weight: 600;
+}
+
+.sub-statement {
+	font-size: 48px;
+	font-weight: 400;
+}
+
+.fb-button {
+    /*adjust the roundness*/
+    background-color: #3B539A;
+    color: white;
+    border-radius: 4px;
+    moz-border-radius: 4px;
+    webkit-border-radius: 4px;
+    /*adjust height and width*/
+    height: 50px;
+    width: 300px;
+    font-size: 20px; 
+    /*change border colour*/
+    border:1px #245ec6 solid;
+
+    
 }
 
