--- a/views/start/location.ejs
+++ b/views/start/location.ejs
@@ -2,16 +2,26 @@
 <html>
   <head>
     <title>Frieyo</title>
-    <link rel='stylesheet' href='/stylesheets/start.css' />
+    <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0, maximum-scale=1.0">
+    <link rel='stylesheet' href='/stylesheets/start.css'/>
   </head>
   <body>
+    <div class="wrapperProfile">
+        <img class="uploadResize" src="/images/start/upload.png">
+        <div class="profilePic">
+          <img class="picResize" src="/images/start/Ro-ProfilePic.png">
+          <span class="caption">Upload new picture</span>
+        </div>
+      </div>
     <div class="container">
       <div class="center">
         <h1 class="title">Hi Rohit!</h1>
-        <h3 class="sub-statement">Enter your zip code!</h3>
-        <div id="status">
-        </div>
+        <h3 class="sub-statement">Enter your zip code</h3>
+        <input type="text" placeholder="">
+        <button class="goButton">Go</button>
+        <p>We suggest friends in your location based off location, mutual friends, and similarity.</p>
       </div>
+
     </div> 
   </body>
 </html>
