--- a/public/stylesheets/start.css
+++ b/public/stylesheets/start.css
@@ -28,6 +28,11 @@ a {
   text-align: center;
 }
 
+.flex {
+  display: flex;
+  justify-content: flex-start;
+}
+
 /* =========================================================================
                             Style
 =======================================================================*/
@@ -80,6 +85,10 @@ div.profilePic {
   float: left;
 }
 
+/* =========================================================================
+                            Location
+=======================================================================*/
+
 .caption {
     /* Make the caption a block so it occupies its own line. */
     display: block;
@@ -128,4 +137,15 @@ input {
   font-size: 32px;
   color: #FFFFFF;
   letter-spacing: 0px;
+}
+
+/* =========================================================================
+                            Interests
+=======================================================================*/
+
+.picResize-Interests {
+  height: auto; 
+  width: auto; 
+  max-width: 150px; 
+  max-height: 150px;
 }
