base version of interests page; messy css

--- a/views/start/interests.ejs
+++ b/views/start/interests.ejs
@@ -3,13 +3,72 @@
   <head>
     <title>Frieyo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0, maximum-scale=1.0">
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
     <link rel='stylesheet' href='/stylesheets/start.css'/>
   </head>
   <body>
-      <img class="picResize-Interests" src="/images/start/Ro-ProfilePic.png">
-      <h2>Rohit, what are your interests?</h2>
-      <p>You will be able to find people with similar interests.</p>
+      <div class="inline-block"> 
+        <h1 class="interestStatement">Rohit, what are your interests?</h1>
+        <button class="continue">Continue</button>
+      </div>
+        <input class="interestBox" type="text" placeholder="Search for something you love...">
+
+
+        <div class="chip">
+          Jane Doe
+        </div>
+        <div class="chip">
+          Jane Doe
+        </div>
+        <div class="chip">
+          Jane Doe
+        </div>
+        <div class="chip">
+          Jane Doe
+        </div>
+        <div class="chip">
+          Jane Doe
+        </div>
+        <div class="chip">
+          Jane Doe
+        </div>
+        <div class="chip">
+          Jane Doe
+        </div>
+        <div class="chip">
+          Jane Doe
+        </div>
+        <div class="chip">
+          Jane Doe
+        </div>
+        <div class="chip">
+          Jane Doe
+        </div>
+        <div class="chip">
+          Jane Doe
+        </div>
+        <div class="chip">
+          Jane Doe
+        </div>
+        <div class="chip">
+          Jane Doe
+        </div>
+        <div class="chip">
+          Jane Doe
+        </div>
+        <div class="chip">
+          Jane Doe
+        </div>
+        <div class="chip">
+          Jane Doe
+        </div>
+        <div class="chip">
+          Jane Doe
+        </div>
+        <div class="chip">
+          Jane Doe
+        </div>
+        <div class="chip">
+          Jane Doe
+        </div>
   </body>
 </html>
