--- a/views/start/location.ejs
+++ b/views/start/location.ejs
@@ -17,7 +17,7 @@
       <div class="center">
         <h1 class="title">Hi Rohit!</h1>
         <h3 class="sub-statement">Enter your zip code</h3>
-        <input type="text" placeholder="">
+        <input class="box" type="text" placeholder="">
         <button class="goButton">Go</button>
         <p>We suggest friends in your location based off location, mutual friends, and similarity.</p>
       </div>
