--- a/public/stylesheets/start.css
+++ b/public/stylesheets/start.css
@@ -4,6 +4,7 @@
 -Text style
 -Location
 -Interests
+-Contact
  */
 
 body {
@@ -144,8 +145,8 @@ input.interestBox {
 
 .goButton {
   /* Rectangle 7: */
-  background: #E9364C;
-  border-color: #E9364C;
+  background: #5450DC;
+  border-color: #5450DC;
   border-radius: 18px;
   height: 75px;
   width: 100px;
@@ -172,14 +173,14 @@ input.interestBox {
   height: 46px;
   font-size: 20px;
   font-weight: 300;
-  color: #E9364C;
+  color: #5450DC;
   line-height: 46px;
   padding: 0 60px;
   border-radius: 20px;
   background-color: white;
   border-style: solid;
   border-width: 2px;
-  border-color: #E9364C;
+  border-color: #5450DC;
   margin: 10px;
 }
 
@@ -193,8 +194,8 @@ input.interestBox {
 
 .continue {
   display: inline-block;
-  background: #E9364C;
-  border-color: #E9364C;
+  background: #5450DC;
+  border-color: #5450DC;
   border-radius: 10px;
   box-sizing: border-box;
   box-shadow: none;
@@ -218,3 +219,42 @@ input.interestBox {
 }
 
 
+/* =========================================================================
+                            Contact
+=======================================================================*/
+
+input.contactBox {
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  border-radius: 12px;
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  width: 400px;
+  height:50px;
+  font-size: 22px;
+  color: #333333;
+  background-color: #F5F8FA;
+  display: block;
+  margin-bottom: 30px;
+}
+
+/* =========================================================================
+                            Contact
+=======================================================================*/
+
+input.aboutBox {
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  border-radius: 12px;
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  width: 500px;
+  height:250px;
+  font-size: 14px;
+  color: #333333;
+  background-color: #F5F8FA;
+  display: block;
+  margin-bottom: 30px;
+}
+
+.aboutBox::-input-placeholder { 
+  
+}
