--- a/views/start/about.ejs
+++ b/views/start/about.ejs
@@ -11,8 +11,9 @@
         <button class="continue">All Done</button>
       </div>
         <p>Just so others can get to know you.</p>
-        <input class="aboutBox" type="text" placeholder="What do you like to do?">
-        <input class="aboutBox" type="text" placeholder="Who do you want to connect with?">
+        <textarea class="aboutBox" type="text" placeholder="What do you like to do?"></textarea>
+        <textarea class="aboutBox" type="text" placeholder="Who do you want to connect with?"></textarea>
 
+  <script src="/javascripts/start.js" type="text/javascript"></script> 
   </body>
 </html>
