--- a/views/start/location.ejs
+++ b/views/start/location.ejs
@@ -18,9 +18,11 @@
         <h1 class="title">Hi Rohit!</h1>
         <h3 class="sub-statement">Enter your zip code</h3>
         <input class="box" type="text" placeholder="">
-        <button class="goButton">Go</button>
+        <a onclick="locationtoInterests();"><button class="goButton">Go</button></a>
         <p>We suggest friends in your location based off location, mutual friends, and similarity.</p>
       </div>
-    </div> 
+    </div>
+
+  <script src="/javascripts/start.js" type="text/javascript"></script> 
   </body>
 </html>
