--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,32 @@
               FB.api('/me', function(response) {
                   user_email = response.email; //get user email
                   // you can store this data into your database
-                  console.log('Good to see you, ' + response.name + '.');             
+                  console.log('Good to see you, ' + response.name + '.');
+
+                  //check if the loginStatus works
+                  FB.getLoginStatus(function(response) {
+                    if (response.status === 'connected') {
+                      // the user is logged in and has authenticated your
+                      // app, and response.authResponse supplies
+                      // the user's ID, a valid access token, a signed
+                      // request, and the time the access token 
+                      // and signed request each expire
+
+                      //redirect to start/location.ejs
+                      window.location = "start/location";
+
+
+
+                      var uid = response.authResponse.userID;
+                      var accessToken = response.authResponse.accessToken;
+                    } else if (response.status === 'not_authorized') {
+                      // the user is logged in to Facebook, 
+                      // but has not authenticated your app
+                    } else {
+                      // the user isn't logged in to Facebook.
+                    }
+                   });
+
               });
 
           } else {
