--- a/views/start/contact.ejs
+++ b/views/start/contact.ejs
@@ -8,7 +8,7 @@
   <body>
       <div class="inline-block"> 
         <h1 class="interestStatement">How do you want to be reached?</h1>
-        <button class="continue">Continue</button>
+        <a onclick="contacttoAbout();"><button class="continue">Continue</button></a>
       </div>
         <p>This is for people getting in touch to discuss common interests.</p>
         <input class="contactBox" type="text" placeholder="http://www.twitter.com/">
@@ -16,6 +16,6 @@
         <input class="contactBox" type="text" placeholder="Email">
 
 
-
+  <script src="/javascripts/start.js" type="text/javascript"></script> 
   </body>
 </html>
