--- a/views/start/interests.ejs
+++ b/views/start/interests.ejs
@@ -8,7 +8,7 @@
   <body>
       <div class="inline-block"> 
         <h1 class="interestStatement">Rohit, what are your interests?</h1>
-        <button class="continue">Continue</button>
+        <a onclick="intereststoContact();"><button class="continue">Continue</button></a>
       </div>
         <input class="interestBox" type="text" placeholder="Search for something you love...">
 
@@ -70,5 +70,7 @@
         <div class="chip">
           Jane Doe
         </div>
+
+  <script src="/javascripts/start.js" type="text/javascript"></script> 
   </body>
 </html>
