added location and mutual friends; about to make user page

--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -9,136 +9,109 @@
   <body>
   	<div class="Grid Grid--gutters Grid--full large-Grid--fit u-textCenter">
 	  <div class="Grid-cell">
-		<div class="card">
+		<div class="card medium">
 		  <div class="card-image">
-		    <img src="http://www.wired.com/wp-content/uploads/2016/02/KanyeWest-42-69483240.jpg">
+		    <img src="/images/kanye.jpg">
 		  </div>
 		  <div class="card-content">
 		    <h2>Kanye West</h2>
 		  </div>
 		  <div class="card-action">
-		    <a href="#">This is a link</a>
-		    <a href="#">This is a link</a>
+		    <p class="alignLeft gray">UC Davis</p>
+		    <div class="alignRight">
+			    <img class="alignLeft mutualResize" src="/images/mutual.png">
+			    <p class="alignRight margin-left-10">4 mutual friends</p>
+			</div>
 		  </div>
 		</div>	    
 	  </div>
 	  <div class="Grid-cell">
-	    <div class="card">
+	    <div class="card medium">
 		  <div class="card-image">
-		    <img src="http://www.wired.com/wp-content/uploads/2016/02/KanyeWest-42-69483240.jpg">
+		    <img src="http://4.bp.blogspot.com/-WL_stegEcJQ/Ut9T4fZIzSI/AAAAAAAARZs/Ts30FjGm0-U/s1600/katyperry22.jpg">
 		  </div>
 		  <div class="card-content">
-		    <h2>Kanye West</h2>
+		    <h2>Katy Perry</h2>
 		  </div>
 		  <div class="card-action">
-		    <a href="#">This is a link</a>
-		    <a href="#">This is a link</a>
+		    <p class="alignLeft gray">UC Davis</p>
+		    <div class="alignRight">
+			    <img class="alignLeft mutualResize" src="/images/mutual.png">
+			    <p class="alignRight margin-left-10">4 mutual friends</p>
+			</div>
 		  </div>
 		</div>	 
 	  </div>
 	  <div class="Grid-cell">
-	    <div class="card">
+	    <div class="card medium">
 		  <div class="card-image">
-		    <img src="http://www.wired.com/wp-content/uploads/2016/02/KanyeWest-42-69483240.jpg">
+		    <img src="http://www.glamour.com/images/entertainment/2015/03/nicki-minaj-main.jpg">
 		  </div>
 		  <div class="card-content">
-		    <h2>Kanye West</h2>
+		    <h2>Nicki Minaj</h2>
 		  </div>
 		  <div class="card-action">
-		    <a href="#">This is a link</a>
-		    <a href="#">This is a link</a>
+		    <p class="alignLeft gray">UC Davis</p>
+		    <div class="alignRight">
+			    <img class="alignLeft mutualResize" src="/images/mutual.png">
+			    <p class="alignRight margin-left-10">4 mutual friends</p>
+			</div>
 		  </div>
 		</div>	 
 	  </div>
 	</div>
 	<div class="Grid Grid--gutters Grid--full large-Grid--fit u-textCenter">
 	  <div class="Grid-cell">
-		<div class="card">
+		<div class="card medium">
 		  <div class="card-image">
-		    <img src="http://www.wired.com/wp-content/uploads/2016/02/KanyeWest-42-69483240.jpg">
+		    <img src="/images/Ro-Green-Jacket.png">
 		  </div>
 		  <div class="card-content">
-		    <h2>Kanye West</h2>
+		    <h2>Rohit Tigga</h2>
 		  </div>
 		  <div class="card-action">
-		    <a href="#">This is a link</a>
-		    <a href="#">This is a link</a>
+		    <p class="alignLeft gray">UC Davis</p>
+		    <div class="alignRight">
+			    <img class="alignLeft mutualResize" src="/images/mutual.png">
+			    <p class="alignRight margin-left-10">4 mutual friends</p>
+			</div>
 		  </div>
 		</div>	    
 	  </div>
 	  <div class="Grid-cell">
-	    <div class="card">
+	    <div class="card medium">
 		  <div class="card-image">
-		    <img src="http://www.wired.com/wp-content/uploads/2016/02/KanyeWest-42-69483240.jpg">
+		    <img src="/images/shank.jpg">
 		  </div>
 		  <div class="card-content">
-		    <h2>Kanye West</h2>
+		    <h2>Shashank Guduru</h2>
 		  </div>
 		  <div class="card-action">
-		    <a href="#">This is a link</a>
-		    <a href="#">This is a link</a>
+		    <p class="alignLeft gray">UC Davis</p>
+		    <div class="alignRight">
+			    <img class="alignLeft mutualResize" src="/images/mutual.png">
+			    <p class="alignRight margin-left-10">4 mutual friends</p>
+			</div>
 		  </div>
 		</div>	 
 	  </div>
 	  <div class="Grid-cell">
-	    <div class="card">
+	    <div class="card medium">
 		  <div class="card-image">
-		    <img src="http://www.wired.com/wp-content/uploads/2016/02/KanyeWest-42-69483240.jpg">
+		    <img src="/images/clarice.jpg">
 		  </div>
 		  <div class="card-content">
-		    <h2>Kanye West</h2>
+		    <h2>Clarice Wong</h2>
 		  </div>
 		  <div class="card-action">
-		    <a href="#">This is a link</a>
-		    <a href="#">This is a link</a>
-		  </div>
-		</div>	 
-	  </div>
-	</div>
-	<div class="Grid Grid--gutters Grid--full large-Grid--fit u-textCenter">
-	  <div class="Grid-cell">
-		<div class="card">
-		  <div class="card-image">
-		    <img src="http://www.wired.com/wp-content/uploads/2016/02/KanyeWest-42-69483240.jpg">
-		  </div>
-		  <div class="card-content">
-		    <h2>Kanye West</h2>
-		  </div>
-		  <div class="card-action">
-		    <a href="#">This is a link</a>
-		    <a href="#">This is a link</a>
-		  </div>
-		</div>	    
-	  </div>
-	  <div class="Grid-cell">
-	    <div class="card">
-		  <div class="card-image">
-		    <img src="http://www.wired.com/wp-content/uploads/2016/02/KanyeWest-42-69483240.jpg">
-		  </div>
-		  <div class="card-content">
-		    <h2>Kanye West</h2>
-		  </div>
-		  <div class="card-action">
-		    <a href="#">This is a link</a>
-		    <a href="#">This is a link</a>
-		  </div>
-		</div>	 
-	  </div>
-	  <div class="Grid-cell">
-	    <div class="card">
-		  <div class="card-image">
-		    <img src="http://www.wired.com/wp-content/uploads/2016/02/KanyeWest-42-69483240.jpg">
-		  </div>
-		  <div class="card-content">
-		    <h2>Kanye West</h2>
-		  </div>
-		  <div class="card-action">
-		    <a href="#">This is a link</a>
-		    <a href="#">This is a link</a>
+		    <p class="alignLeft gray">UC Davis</p>
+		    <div class="alignRight">
+			    <img class="alignLeft mutualResize" src="/images/mutual.png">
+			    <p class="alignRight margin-left-10">4 mutual friends</p>
+			</div>
 		  </div>
 		</div>	 
 	  </div>
 	</div>
-
   </body>
 </html>
