--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -81,7 +81,7 @@ a {
   background-color: #fff;
   transition: box-shadow .25s;
   border-radius: 2px;
-  border-color: #9B9B9B;
+  border-color: #CCCCCC;
   border-style: solid;
   border-radius: 1px;
   border-radius: 4px;
@@ -123,6 +123,7 @@ a {
 
 .card.medium {
   height: 400px;
+  
 }
 
 .card.large {
@@ -172,17 +173,17 @@ a {
   border-top: 1px solid rgba(160, 160, 160, 0.2);
   padding: 20px;
   z-index: 2;
+  display: inline-block;
 }
 
-.card .card-action a:not(.btn):not(.btn-large):not(.btn-floating) {
-  color: #ffab40;
+.card .card-action p:not(.btn):not(.btn-large):not(.btn-floating) {
+  color: #5450DC;
   margin-right: 20px;
   transition: color .3s ease;
-  text-transform: uppercase;
 }
 
-.card .card-action a:not(.btn):not(.btn-large):not(.btn-floating):hover {
-  color: #ffd8a6;
+.card .card-action p:not(.btn):not(.btn-large):not(.btn-floating):hover {
+  color: #5450DC;
 }
 
 .card .card-action + .card-reveal {
@@ -211,5 +212,30 @@ a {
                             Feed
 =======================================================================*/
 
+.alignLeft {
+  float: left;
+}
 
+.alignRight {
+  float: right;
+}
 
+.mutualResize {
+  height: auto; 
+  width: auto; 
+  max-width: 20px; 
+  max-height: 20px;
+}
+
+.margin-left-10 {
+  margin-left: 10px;
+}
+
+.gray {
+  color: #727172 !important;
+}
+
+p {
+  font-size: 17.5px;
+  font-weight: 450;
+}
