--- a/views/feed/user.ejs
+++ b/views/feed/user.ejs
@@ -4,10 +4,10 @@
     <title>Frieyo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0, maximum-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/style.css'/>
-    <link rel='stylesheet' href='/stylesheets/flex.css'/>
+    <link rel='stylesheet' href='/stylesheets/bootstrap.css'/>
   </head>
   <body>
-    <div style="display:block;">
+    <div class="col-md-4">
       <img class="picResize" src="/images/Ro-Green-Jacket.png">
       <h1>Rohit Tigga</h1>
       <p>San Jose, California</p>
@@ -23,6 +23,27 @@
         Basketball
       </div>
     </div>
+    <h1>Say Hi to Rohit!</h1>
+    <div class="facebookBox">
+      Facebook
+    </div>
+    <div class="twitterBox">
+      Twitter
+    </div>
+    <div class="linkedinBox">
+      Linkedin
+    </div>
+    <div class="emailBox">
+    Email
+    </div>
+
+
+    <h1>Who are you and what do you do?</h1>
+    <p>My name is Rohit Tigga. I'm a third-year computer science major at UC Davis. I'm really into tech, design and pop music. I grew up in San Jose, California. When I'm not busy coding, designing, or organizing hackathons, I can be found at the gym playing basketball or lifting weight.</p>
+
+    <h1>Who are you looking to connect with?</h1>
+    <p>I'm looking to connect with anyone in general.  You don't necessarily have to share the same interests or music tastes as me; however, that makes it more likely for us to be best friends.</p>
+
 
 
   </body>
