--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -4,114 +4,118 @@
     <title>Frieyo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0, maximum-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/style.css'/>
-    <link rel='stylesheet' href='/stylesheets/flex.css'/>
+    <link rel='stylesheet' href='/stylesheets/feed.css'/>
   </head>
   <body>
-  	<div class="Grid Grid--gutters Grid--full large-Grid--fit u-textCenter">
-	  <div class="Grid-cell">
-		<div class="card medium">
-		  <div class="card-image">
-		    <img src="/images/kanye.jpg">
+  	<div class="container margin-top-40">
+	  	<div class="columns">
+		  <div class="column">
+			<div class="card small">
+			  <div class="card-image">
+			    <img src="/images/kanye.jpg">
+			  </div>
+			  <div class="card-content">
+			    <h2 class="nameSize">Kanye West</h2>
+			  </div>
+			  <div class="card-action">
+			    <p class="alignLeft gray">UC Davis</p>
+			    <div class="alignRight">
+				    <img class="alignLeft mutualResize" src="/images/mutual.png">
+				    <p class="alignRight margin-left-10">4 mutual friends</p>
+				</div>
+			  </div>
+			</div>	    
 		  </div>
-		  <div class="card-content">
-		    <h2>Kanye West</h2>
+		  <div class="column">
+		    <div class="card small">
+			  <div class="card-image">
+			    <img src="http://4.bp.blogspot.com/-WL_stegEcJQ/Ut9T4fZIzSI/AAAAAAAARZs/Ts30FjGm0-U/s1600/katyperry22.jpg">
+			  </div>
+			  <div class="card-content">
+			    <h2 class="nameSize">Katy Perry</h2>
+			  </div>
+			  <div class="card-action">
+			    <p class="alignLeft gray">UC Davis</p>
+			    <div class="alignRight">
+				    <img class="alignLeft mutualResize" src="/images/mutual.png">
+				    <p class="alignRight margin-left-10">4 mutual friends</p>
+				</div>
+			  </div>
+			</div>	 
 		  </div>
-		  <div class="card-action">
-		    <p class="alignLeft gray">UC Davis</p>
-		    <div class="alignRight">
-			    <img class="alignLeft mutualResize" src="/images/mutual.png">
-			    <p class="alignRight margin-left-10">4 mutual friends</p>
-			</div>
+		  <div class="column">
+		    <div class="card small">
+			  <div class="card-image">
+			    <img src="http://www.glamour.com/images/entertainment/2015/03/nicki-minaj-main.jpg">
+			  </div>
+			  <div class="card-content">
+			    <h2 class="nameSize">Nicki Minaj</h2>
+			  </div>
+			  <div class="card-action">
+			    <p class="alignLeft gray">UC Davis</p>
+			    <div class="alignRight">
+				    <img class="alignLeft mutualResize" src="/images/mutual.png">
+				    <p class="alignRight margin-left-10">4 mutual friends</p>
+				</div>
+			  </div>
+			</div>	 
 		  </div>
-		</div>	    
-	  </div>
-	  <div class="Grid-cell">
-	    <div class="card medium">
-		  <div class="card-image">
-		    <img src="http://4.bp.blogspot.com/-WL_stegEcJQ/Ut9T4fZIzSI/AAAAAAAARZs/Ts30FjGm0-U/s1600/katyperry22.jpg">
-		  </div>
-		  <div class="card-content">
-		    <h2>Katy Perry</h2>
-		  </div>
-		  <div class="card-action">
-		    <p class="alignLeft gray">UC Davis</p>
-		    <div class="alignRight">
-			    <img class="alignLeft mutualResize" src="/images/mutual.png">
-			    <p class="alignRight margin-left-10">4 mutual friends</p>
-			</div>
-		  </div>
-		</div>	 
-	  </div>
-	  <div class="Grid-cell">
-	    <div class="card medium">
-		  <div class="card-image">
-		    <img src="http://www.glamour.com/images/entertainment/2015/03/nicki-minaj-main.jpg">
-		  </div>
-		  <div class="card-content">
-		    <h2>Nicki Minaj</h2>
-		  </div>
-		  <div class="card-action">
-		    <p class="alignLeft gray">UC Davis</p>
-		    <div class="alignRight">
-			    <img class="alignLeft mutualResize" src="/images/mutual.png">
-			    <p class="alignRight margin-left-10">4 mutual friends</p>
-			</div>
-		  </div>
-		</div>	 
-	  </div>
+		</div>
 	</div>
-	<div class="Grid Grid--gutters Grid--full large-Grid--fit u-textCenter">
-	  <div class="Grid-cell">
-		<div class="card medium">
-		  <div class="card-image">
-		    <img src="/images/Ro-Green-Jacket.png">
+	<div class="container">
+		<div class="columns">
+		  <div class="column">
+			<div class="card small">
+			  <div class="card-image">
+			    <img src="/images/Ro-Green-Jacket.png">
+			  </div>
+			  <div class="card-content">
+			    <h2 class="nameSize">Rohit Tigga</h2>
+			  </div>
+			  <div class="card-action">
+			    <p class="alignLeft gray">UC Davis</p>
+			    <div class="alignRight">
+				    <img class="alignLeft mutualResize" src="/images/mutual.png">
+				    <p class="alignRight margin-left-10">4 mutual friends</p>
+				</div>
+			  </div>
+			</div>	    
 		  </div>
-		  <div class="card-content">
-		    <h2>Rohit Tigga</h2>
+		  <div class="column">
+		    <div class="card small">
+			  <div class="card-image">
+			    <img src="/images/shank.jpg">
+			  </div>
+			  <div class="card-content">
+			    <h2 class="nameSize">Shashank Guduru</h2>
+			  </div>
+			  <div class="card-action">
+			    <p class="alignLeft gray">UC Davis</p>
+			    <div class="alignRight">
+				    <img class="alignLeft mutualResize" src="/images/mutual.png">
+				    <p class="alignRight margin-left-10">4 mutual friends</p>
+				</div>
+			  </div>
+			</div>	 
 		  </div>
-		  <div class="card-action">
-		    <p class="alignLeft gray">UC Davis</p>
-		    <div class="alignRight">
-			    <img class="alignLeft mutualResize" src="/images/mutual.png">
-			    <p class="alignRight margin-left-10">4 mutual friends</p>
-			</div>
+		  <div class="column">
+		    <div class="card small">
+			  <div class="card-image">
+			    <img src="/images/clarice.jpg">
+			  </div>
+			  <div class="card-content">
+			    <h2 class="nameSize">Clarice Wong</h2>
+			  </div>
+			  <div class="card-action">
+			    <p class="alignLeft gray">UC Davis</p>
+			    <div class="alignRight">
+				    <img class="alignLeft mutualResize" src="/images/mutual.png">
+				    <p class="alignRight margin-left-10">4 mutual friends</p>
+				</div>
+			  </div>
+			</div>	 
 		  </div>
-		</div>	    
-	  </div>
-	  <div class="Grid-cell">
-	    <div class="card medium">
-		  <div class="card-image">
-		    <img src="/images/shank.jpg">
-		  </div>
-		  <div class="card-content">
-		    <h2>Shashank Guduru</h2>
-		  </div>
-		  <div class="card-action">
-		    <p class="alignLeft gray">UC Davis</p>
-		    <div class="alignRight">
-			    <img class="alignLeft mutualResize" src="/images/mutual.png">
-			    <p class="alignRight margin-left-10">4 mutual friends</p>
-			</div>
-		  </div>
-		</div>	 
-	  </div>
-	  <div class="Grid-cell">
-	    <div class="card medium">
-		  <div class="card-image">
-		    <img src="/images/clarice.jpg">
-		  </div>
-		  <div class="card-content">
-		    <h2>Clarice Wong</h2>
-		  </div>
-		  <div class="card-action">
-		    <p class="alignLeft gray">UC Davis</p>
-		    <div class="alignRight">
-			    <img class="alignLeft mutualResize" src="/images/mutual.png">
-			    <p class="alignRight margin-left-10">4 mutual friends</p>
-			</div>
-		  </div>
-		</div>	 
-	  </div>
+		</div>
 	</div>
   </body>
 </html>
