added click thru functions in start.js

--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -67,7 +67,7 @@
 		  <div class="column">
 			<div class="card small">
 			  <div class="card-image">
-			    <img src="/images/Ro-Green-Jacket.png">
+			    <a onclick="feedtoUser()"><img src="/images/Ro-Green-Jacket.png"></a>
 			  </div>
 			  <div class="card-content">
 			    <h2 class="nameSize">Rohit Tigga</h2>
@@ -117,5 +117,6 @@
 		  </div>
 		</div>
 	</div>
+	<script src="/javascripts/start.js" type="text/javascript"></script> 
   </body>
 </html>
