--- a/views/start/about.ejs
+++ b/views/start/about.ejs
@@ -8,7 +8,7 @@
   <body>
       <div class="inline-block"> 
         <h1 class="interestStatement">Last thing, tell us about yourself!</h1>
-        <button class="continue">All Done</button>
+        <a onclick="abouttoFeed()"><button class="continue">All Done</button></a>
       </div>
         <p>Just so others can get to know you.</p>
         <textarea class="aboutBox" type="text" placeholder="What do you like to do?"></textarea>
