--- a/views/index.ejs
+++ b/views/index.ejs
@@ -123,10 +123,15 @@
     });
   }*/
 </script>
+  <nav>
+    <img class="resizeLogo" src="/images/logo.png">
+    <p class="logoText">Frieyo</p>
+  </nav>
   	<div class="container">
       <div class="center white-text">
-        <h1 class="title">Frieyo</h1>
-        <h3 class="sub-statement"> Share your interests</h3>
+        <img class="resizeRohit" src="/images/Rohit-Landing.png">
+        <p class="useText">Rohit used Frieyo to find people to play music</p>
+        <h1 class="title">Do Stuff Together</h1>
         <!--
           Below we include the Login Button social plugin. This button uses
           the JavaScript SDK to present a graphical Login button that triggers
