--- a/views/start/interests.ejs
+++ b/views/start/interests.ejs
@@ -4,73 +4,82 @@
     <title>Frieyo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0, maximum-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/start.css'/>
+    <link rel='stylesheet' href='/stylesheets/bootstrap.css'/>
   </head>
   <body>
-      <div class="inline-block"> 
-        <h1 class="interestStatement">Rohit, what are your interests?</h1>
-        <a onclick="intereststoContact();"><button class="continue">Continue</button></a>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 inline-block"> 
+          <h1 class="interestStatement">What are your interests?</h1>
+          <input class="interestBox" type="text" placeholder="Search for something you love...">
+        </div>
+        <div class="col-md-2 inline-block">
+          <a onclick="intereststoContact();"> <button class="continue">Continue</button> </a>
+        </div>
       </div>
-        <input class="interestBox" type="text" placeholder="Search for something you love...">
+    </div>
+    <div class="container">
+      <div class="row inline-block">
 
-
         <div class="chip">
-          Jane Doe
+          Sports
         </div>
         <div class="chip">
-          Jane Doe
+          News
         </div>
         <div class="chip">
-          Jane Doe
+          Music
         </div>
         <div class="chip">
-          Jane Doe
+          Entertainment
         </div>
         <div class="chip">
-          Jane Doe
+          Lifestyle
         </div>
         <div class="chip">
-          Jane Doe
+          Tech
         </div>
         <div class="chip">
-          Jane Doe
+          Science
         </div>
         <div class="chip">
-          Jane Doe
+          Design
         </div>
         <div class="chip">
-          Jane Doe
+          Art & Culture
         </div>
         <div class="chip">
-          Jane Doe
+          Government & Politics
         </div>
         <div class="chip">
-          Jane Doe
+          Gaming
         </div>
         <div class="chip">
-          Jane Doe
+          Non-Profits
         </div>
         <div class="chip">
-          Jane Doe
+          Fitness
         </div>
         <div class="chip">
-          Jane Doe
+          Humor
         </div>
         <div class="chip">
-          Jane Doe
+          Travel
         </div>
         <div class="chip">
-          Jane Doe
+          Movies
         </div>
         <div class="chip">
-          Jane Doe
+          Parenting
         </div>
         <div class="chip">
-          Jane Doe
+          Fashion
         </div>
         <div class="chip">
-          Jane Doe
+          Writing
         </div>
-
+      </div>
+    </div>
   <script src="/javascripts/start.js" type="text/javascript"></script> 
   </body>
 </html>
