--- a/views/start/location.ejs
+++ b/views/start/location.ejs
@@ -4,23 +4,22 @@
     <title>Frieyo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0, maximum-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/start.css'/>
+    <link rel='stylesheet' href='/stylesheets/bootstrap.css'/>
   </head>
   <body>
-    <div class="wrapperProfile">
+    <div class="col-md-3">
         <img class="uploadResize" src="/images/start/upload.png">
         <div class="profilePic">
           <img class="picResize" src="/images/start/Ro-ProfilePic.png">
           <span class="caption">Upload new picture</span>
         </div>
       </div>
-    <div class="container">
-      <div class="center">
+    <div class="col-md-6">
         <h1 class="title">Hi Rohit!</h1>
         <h3 class="sub-statement">Enter your zip code</h3>
         <input class="box" type="text" placeholder="">
         <a onclick="locationtoInterests();"><button class="goButton">Go</button></a>
         <p>We suggest friends in your location based off location, mutual friends, and similarity.</p>
-      </div>
     </div>
   <script src="/javascripts/start.js" type="text/javascript"></script> 
   </body>
