--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,11 +122,19 @@
         }
     });
   }*/
+
+  function navCollapse() {
+    document.getElementsByClassName("topnav")[0].classList.toggle("responsive");
+}
 </script>
-  <nav>
+  <!-- <nav>
     <img class="resizeLogo" src="/images/logo.png">
     <p class="logoText">Frieyo</p>
-  </nav>
+  </nav> -->
+  <ul class="topnav">
+  <li><img class="resizeLogo" src="/images/logo.png">
+    <p class="logoText">Frieyo</p></li>
+</ul>
   	<div class="container">
       <div class="center white-text">
         <img class="resizeRohit" src="/images/Rohit-Landing.png">
